--- a/style.css
+++ b/style.css
@@ -17,16 +17,29 @@ h1 {
 }
 
 .container-card {
-  grid-template-columns: 100px 50px 100px;
-  grid-template-rows: 80px auto 80px;
-  column-gap: 10px;
-  row-gap: 15px;
+  display: flex;
   justify-content: center;
+  flex-flow: row;
 }
 
 .flex-card {
-  justify-self: center;
-  width: 55px;
-  height: 55px;
-  background-image: url(/img/ginger.png);
+  width: 200px;
+  height: 200px;
+  border: 3px solid red;
+}
+
+#city {
+  background-image: url(img/city.jpg);
+}
+
+.ginger {
+  background-image: url(img/ginger.png);
+  width: 300px;
+  height: 350px;
+}
+
+.bis {
+  background-image: url(img/bisgrow.jpg);
+  width: 300px;
+  height: 350px;
 }
