--- a/style.css
+++ b/style.css
@@ -18,28 +18,11 @@ h1 {
 
 .container-card {
   display: flex;
-  justify-content: center;
+  justify-content: space-around;
   flex-flow: row;
 }
 
 .flex-card {
   width: 200px;
   height: 200px;
-  border: 3px solid red;
-}
-
-#city {
-  background-image: url(img/city.jpg);
-}
-
-.ginger {
-  background-image: url(img/ginger.png);
-  width: 300px;
-  height: 350px;
-}
-
-.bis {
-  background-image: url(img/bisgrow.jpg);
-  width: 300px;
-  height: 350px;
 }
