--- a/style.css
+++ b/style.css
@@ -1,14 +1,36 @@
-@import url("https://fonts.googleapis.com/css2?family=Nanum+Pen+Script&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Croissant+One&display=swap");
-
+@import url("https://fonts.googleapis.com/css2?family=Source+Code+Pro:ital,wght@1,700&display=swap");
 body {
   background-color: #333333;
-  color: bisque;
-  font-family: "Croissant One", sans-serif;
+  color: #fff28e;
+  font-family: "Source Code Pro", monospace;
+  font-size: 30px;
 }
 
-h1 {
-  font-family: "Nanum Pen Script", cursive;
+nav {
+  background-color: #333333;
+  position: fixed;
+  top: 0;
+  width: 100%;
+}
+
+nav ul {
+  list-style: none;
+  font-style: oblique;
+  float: right;
+}
+
+nav ul li {
+  display: inline;
+  padding: 5px;
+}
+
+nav ul li a {
+  text-decoration: none;
+  color: inherit;
+}
+
+section {
+  margin-top: 100px;
 }
 
 .card a {
@@ -19,9 +41,23 @@ h1 {
 .container-card {
   display: flex;
   justify-content: space-around;
-  flex-flow: row;
+  flex-flow: wrap;
   align-items: center;
 }
 
+img {
+  width: 400px;
+  height: 300px;
+}
+
 .card {
+  width: 400px;
+  height: 300px;
+  margin: 25px;
+  transition: all 200ms ease-out;
+}
+
+.card:hover {
+  opacity: 30%;
+  transform: translateY(10px);
 }
