--- a/style.css
+++ b/style.css
@@ -4,6 +4,8 @@ body {
   color: #000000;
   font-family: "Assistant", sans-serif;
   font-size: 30px;
+  margin: 0;
+  padding: 0;
 }
 
 nav {
@@ -18,16 +20,20 @@ nav ul {
   list-style: none;
   font-style: oblique;
   float: right;
+  color: green;
+  border: 5px;
 }
 
 nav ul li {
   display: inline;
   padding: 5px;
+  color: pink;
 }
 
 nav ul li a {
   text-decoration: none;
   color: inherit;
+  font-size: 23px;
 }
 
 section {
@@ -36,6 +42,21 @@ section {
 
 #welcome-section {
   height: 100vh;
+}
+
+#wlcm-parent {
+  display: flex;
+  direction: justify-content;
+}
+
+#wlcm-right,
+#wlcm-left {
+  width: 50%;
+}
+
+img#interview-img {
+  width: 20em;
+  height: 20em;
 }
 
 .card a {
