--- a/style.css
+++ b/style.css
@@ -77,31 +77,19 @@ img#interview-img {
   height: 20em;
 }
 
-.card a {
-  text-decoration: none;
-  color: inherit;
+.container-grid {
+  grid-template-columns: 100px 50px 100px;
+  grid-template-rows: 80px auto 80px;
+  column-gap: 10px;
+  row-gap: 15px;
 }
 
-.container-card-grid {
-  display: flex;
-  justify-content: space-around;
-  flex-flow: wrap;
-  align-items: center;
+.project-title {
+  font-size: 2rem;
+  padding: 2rem 0.5rem;
 }
 
 img {
   width: 400px;
   height: 300px;
-}
-
-.project-tile {
-  width: 400px;
-  height: 300px;
-  margin: 25px;
-  transition: all 200ms ease-out;
-}
-
-.project-tile:hover {
-  opacity: 30%;
-  transform: translateY(10px);
 }
