--- a/style.css
+++ b/style.css
@@ -59,16 +59,17 @@ input {
 button,
 .input-btn {
   padding: 13px 30px;
-  border: 2px solid #fece2f;
-  background-color: #fece2f;
+  border: 2px solid #000000;
+  background-color: #000000;
   cursor: pointer;
   transition: all 200ms ease-out;
+  color: #fece2f;
 }
 
 button:hover,
 .input-btn:hover {
-  border: 2px solid #000000;
-  background-color: transparent;
+  border: 2px solid #fece2f;
+  background-color: #fece2f;
   color: #000000;
 }
 
@@ -78,15 +79,31 @@ img#interview-img {
 }
 
 .container-grid {
-  grid-template-columns: 100px 50px 100px;
-  grid-template-rows: 80px auto 80px;
-  column-gap: 10px;
-  row-gap: 15px;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-gap: 5em;
+  margin: 5px;
+}
+.grid1 {
+  grid-area: 1 / 3 / 2 / 4;
+}
+.grid2 {
+  grid-area: 2 / 3 / 3 / 4;
+}
+.grid3 {
+  grid-area: 1 / 2 / 2 / 3;
+}
+.grid4 {
+  grid-area: 2 / 2 / 3 / 3;
 }
 
-.project-title {
-  font-size: 2rem;
-  padding: 2rem 0.5rem;
+p.text,
+.btn-process {
+  font-size: 20px;
+}
+
+.btn-process {
+  padding: 10px 15px;
 }
 
 img {
