--- a/style.css
+++ b/style.css
@@ -52,6 +52,10 @@ section {
   padding: 5em;
 }
 
+h2 {
+  text-align: center;
+}
+
 input {
   padding: 13px 40px;
 }
@@ -80,9 +84,8 @@ img#interview-img {
 
 .container-grid {
   display: grid;
-  grid-template-columns: repeat(2, 1fr);
   grid-gap: 5em;
-  margin: 5px;
+  margin: 0 auto;
 }
 .grid1 {
   grid-area: 1 / 3 / 2 / 4;
