--- a/style.css
+++ b/style.css
@@ -84,20 +84,11 @@ img#interview-img {
 
 .container-grid {
   display: grid;
-  grid-gap: 5em;
-  margin: 0 auto;
-}
-.grid1 {
-  grid-area: 1 / 3 / 2 / 4;
-}
-.grid2 {
-  grid-area: 2 / 3 / 3 / 4;
-}
-.grid3 {
-  grid-area: 1 / 2 / 2 / 3;
-}
-.grid4 {
-  grid-area: 2 / 2 / 3 / 3;
+  grid-template-columns: 8px 8px 8px;
+  grid-template-rows: 8px 8px 8px;
+  grid-gap: 15px;
+  justify-content: space-around;
+  justify-items: center;
 }
 
 p.text,
