--- a/style.css
+++ b/style.css
@@ -105,8 +105,7 @@ img#interview-img {
 }
 
 .wrapper div {
-  background-color: pink;
-  color: blueviolet;
+  background-color: #ffffff;
   font-size: 24px;
   list-style-type: none;
   padding: 5rem 1rem;
@@ -116,8 +115,8 @@ img#interview-img {
 }
 
 .grid-img {
-  width: 60px;
-  height: 60px;
+  width: 20em;
+  height: 20em;
 }
 
 p.text,
