--- a/style.css
+++ b/style.css
@@ -152,3 +152,10 @@ img.icon:hover {
 small {
   font-size: 13px;
 }
+
+@media screen and (max-width: 992px) {
+  body {
+    background-color:black;
+  color: #ffffff;
+  }
+}
